--- a/src/Components/DistributoreScreen/DistributoreScreen.css
+++ b/src/Components/DistributoreScreen/DistributoreScreen.css
@@ -17,7 +17,9 @@
       -ms-flex-pack: center;
           justify-content: center;
   min-width: 380px;
-  z-index: 98;
+  z-index: 99;
+  min-width: 1152px !important;
+  min-height: 900px !important;
 }
 
 .titoloDistributore {
@@ -71,7 +73,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   border-bottom: solid 4px #333333;
-  padding: 10px;
+  padding: 30px;
 }
 
 .compraProdotto1 {
