--- a/src/Components/DistributoreScreen/DistributoreScreen.scss
+++ b/src/Components/DistributoreScreen/DistributoreScreen.scss
@@ -13,7 +13,9 @@ $titolo: clamp(2.8rem, 5vw, 4rem);
   align-items: center;
   justify-content: center;
   min-width: 380px;
-  z-index: 98;
+  z-index: 99;
+  min-width: 1152px !important;
+  min-height: 900px !important;
 }
 
 .titoloDistributore {
@@ -45,7 +47,7 @@ $titolo: clamp(2.8rem, 5vw, 4rem);
   align-items: center;
   justify-content: center;
   border-bottom: solid 4px #333333;
-  padding: 10px;
+  padding: 30px;
 }
 .compraProdotto1 {
   grid-area: 1 / 3 / 2 / 4;
