--- a/src/Components/InfoScreen/InfoScreen.css
+++ b/src/Components/InfoScreen/InfoScreen.css
@@ -6,7 +6,6 @@
 .contenitoreInfoScreen {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -23,6 +22,8 @@
           justify-content: center;
   min-width: 380px;
   z-index: 99;
+  min-width: 1152px !important;
+  min-height: 900px !important;
 }
 
 .contenutoInfoScreen {
