--- a/src/Components/InfoScreen/InfoScreen.scss
+++ b/src/Components/InfoScreen/InfoScreen.scss
@@ -11,7 +11,6 @@ $titolo: clamp(2.8rem, 5vw, 4rem);
 .contenitoreInfoScreen {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -19,6 +18,8 @@ $titolo: clamp(2.8rem, 5vw, 4rem);
   justify-content: center;
   min-width: 380px;
   z-index: 99;
+  min-width: 1152px !important;
+  min-height: 900px !important;
 }
 
 .contenutoInfoScreen {
