--- a/src/Components/Inventario/Inventario.css
+++ b/src/Components/Inventario/Inventario.css
@@ -18,6 +18,7 @@
           justify-content: center;
   min-width: 380px;
   z-index: 98;
+  min-width: 1152px !important;
 }
 
 .titoloPlayerInventario {
