--- a/src/Components/Inventario/Inventario.scss
+++ b/src/Components/Inventario/Inventario.scss
@@ -14,6 +14,7 @@ $titolo: clamp(2.8rem, 5vw, 4rem);
   justify-content: center;
   min-width: 380px;
   z-index: 98;
+  min-width: 1152px !important;
 }
 
 .titoloPlayerInventario {
