--- a/src/Components/MisteriosoScreen/MisteriosoScreen.scss
+++ b/src/Components/MisteriosoScreen/MisteriosoScreen.scss
@@ -13,7 +13,9 @@ $titolo: clamp(2.8rem, 5vw, 4rem);
   align-items: center;
   justify-content: center;
   min-width: 380px;
-  z-index: 98;
+  z-index: 99;
+  min-width: 1152px !important;
+  min-height: 900px !important;
 }
 
 .titoloMisteriosoScreen {
