--- a/src/screens/Gioca/Gioca.scss
+++ b/src/screens/Gioca/Gioca.scss
@@ -32,3 +32,9 @@ $coloreSecondario: #e5b62e;
   min-width: 1152px !important;
   min-height: 900px !important;
 }
+
+.stopwatch {
+  width: 1152px;
+  text-align: left !important;
+  color: #fff;
+}
